--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "core-js": "^3.6.4",
+        "element-ui": "^2.13.2",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
         "vue": "^2.6.11",
